@@ -18,6 +18,7 @@ Features added
   using HTTP basic auth
 * C++, added support for template parameter in function info field lists.
 * C++, added support for pointers to member (function).
+* #2113: Allow ``:class:`` option to code-block directive
 
 Bugs fixed
 ----------
